merge 5317 from 2.4 branch
git-svn-id: https://svn.terracotta.org/repo/tc/dso/trunk@5318 7fc7bbf3-cf45-46d4-be06-341739edd864