@@ -49,7 +49,7 @@ import junit.framework.Assert;
 
 public class GenericServer extends AbstractStoppable implements WebApplicationServer {
   private static final String               SERVER          = "server_";
-  private static final boolean              GC_LOGGGING     = false;
+  private static final boolean              GC_LOGGGING     = true;
   private static final boolean              ENABLE_DEBUGGER = false;
 
   private final int                         jmxRemotePort;
@@ -129,6 +129,7 @@ public class GenericServer extends AbstractStoppable implements WebApplicationSe
       case AppServerFactory.WEBLOGIC:
         // bumped up because ContainerHibernateTest was failing with WL 9
         parameters.appendJvmArgs("-XX:MaxPermSize=128m");
+        parameters.appendJvmArgs("-Xms128m -Xmx256m");
         break;
     }
 
@@ -149,6 +150,7 @@ public class GenericServer extends AbstractStoppable implements WebApplicationSe
     if (GC_LOGGGING && !Vm.isIBM()) {
       parameters.appendJvmArgs("-verbose:gc");
       parameters.appendJvmArgs("-XX:+PrintGCDetails");
+      parameters.appendJvmArgs("-XX:+PrintGCTimeStamps");
       parameters.appendJvmArgs("-Xloggc:"
                                + new File(this.installation.sandboxDirectory(), serverInstanceName + "-gc.log")
                                    .getAbsolutePath());
